Correct the i18n spans.

--- a/index_i18n.html
+++ b/index_i18n.html
@@ -142,11 +142,14 @@
     <footer>
         <div id="footer">
             <p>
-                <span id="Confirmed" class="count" data-i18n="confirmed">確診 Confirmed</span>
+                <span data-i18n="confirmed">確診 Confirmed</span>
+                <span id="Confirmed" class="count" data-i18n="confirmed" />
                 /
-                <span id="Deaths" class="count" data-i18n="deceased">死亡 Deceased</span>
+                <span data-i18n="deceased">死亡 Deceased</span>
+                <span id="Deaths" class="count" />
                 /
-                <span id="Recovered" class="count" data-i18n="recovered">治癒 Recovered</span>
+                <span data-i18n="recovered">治癒 Recovered</span>
+                <span id="Recovered" class="count" />
             </p>
         </div>
     </footer>
