Fix stats spans.

--- a/index_i18n.html
+++ b/index_i18n.html
@@ -143,13 +143,13 @@
         <div id="footer">
             <p>
                 <span data-i18n="confirmed">確診</span>
-                <span id="Confirmed" class="count" />
+                <span id="Confirmed" class="count"></span>
                 /
                 <span data-i18n="deceased">死亡</span>
-                <span id="Deaths" class="count" />
+                <span id="Deaths" class="count"></span>
                 /
                 <span data-i18n="recovered">治癒</span>
-                <span id="Recovered" class="count" />
+                <span id="Recovered" class="count"></span>
             </p>
         </div>
     </footer>
