Try relative paths.

--- a/index_i18n.html
+++ b/index_i18n.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+  <base href="/2019-nCoV/">
   <meta charset="utf-8">
   <meta property="og:title" content="COVID-19 | 新冠肺炎 | 2019-nCoV | 武漢肺炎地圖">
   <meta property="og:description" content="COVID-19 | 新冠肺炎 | 2019-nCoV | 武漢肺炎地圖">
